Fix for spacing issue in collpasible groups

--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
@@ -196,6 +196,8 @@
 
 .question-tile-row:has(div.q) {
   margin-bottom: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .question-tile-row {
@@ -207,4 +209,9 @@
     margin-top: 0px !important;
     margin-bottom: 0px !important;
   }
+}
+
+div[class*="gr"][class*="col-sm-"][class*="panel"][class*="panel-default"] {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
 }
